[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.OrderOfProtection"
version = "1.1.10"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Matt Newsted", email = "mnewsted@illinoislegalaid.org" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
